# ubx

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  component.cmake  format.sh
.github/workflows/: build.yml
.reuse/: dep5
component/: CMakeLists.txt  README.md
configuration/cmake/: PreCommit.cmake
configuration/cmake/precommit/: PreCommitInstall.sh
include/: UbxFrame.hpp  UbxMessage.hpp  UbxTypes.hpp  UbxUtilities.hpp  ubx_frame.hpp  ubx_frame_factory.hpp  ubx_frame_processor.hpp  ubx_message.hpp  ubx_message_dispatcher.hpp  ubx_message_factory.hpp  ubx_message_handler.hpp  ubx_types.hpp  ubx_utilities.hpp
include/messages/: ubx_ack_ack_message.hpp  ubx_ack_message.hpp  ubx_ack_nack_message.hpp  ubx_cfg_msg_message.hpp  ubx_cfg_prt_message.hpp  ubx_cfg_rate_message.hpp  ubx_message_configuration_message.hpp  ubx_nack_message.hpp  ubx_nav_pvt_message.hpp  ubx_port_configuration_message.hpp  ubx_port_configuration_poll_message.hpp  ubx_uart_port_configuration_message.hpp
include/private/: ubx_ack_nack_message_reader.hpp
include/types/: ubx_fix_status_flags.hpp  ubx_fix_status_flags2.hpp  ubx_fix_status_flags3.hpp  ubx_port_flags.hpp  ubx_protocol_in_mask.hpp  ubx_protocol_out_mask.hpp  ubx_tx_ready_configuration.hpp  ubx_uart_configuration.hpp  ubx_validity_flags.hpp
src/: CMakeLists.txt  UbxUtilities.cpp  ubx_message_factory.cpp  ubx_utilities.cpp
test/: CMakeLists.txt  Test_Frame.cpp  Test_Message.cpp  test_ack_ack_message.cpp  test_ack_message.cpp  test_ack_nack_message.cpp  test_cfg_msg_message.cpp  test_cfg_prt_message.cpp  test_cfg_rate_message.cpp  test_fix_status_flags.cpp  test_fix_status_flags2.cpp  test_fix_status_flags3.cpp  test_frame.cpp  test_frame_factory.cpp  test_frame_processor.cpp  test_message.cpp  test_message_configuration_message.cpp  test_message_dispatcher.cpp  test_nack_message.cpp  test_nav_pvt_message.cpp  test_port_configuration_message.cpp  test_port_configuration_poll_message.cpp  test_port_flags.cpp  test_protocol_in_mask.cpp  test_protocol_out_mask.cpp  test_raw_messages.hpp  test_uart_configuration.cpp  test_uart_port_configuration_message.cpp  test_validity_flags.cpp
ubx/: CMakeLists.txt
